# VisageDvachevsky-NM-

./: CLAUDE.md  CMakeLists.txt  README.md  gui-assessment.md  issue-41-details.json  pr-42-checks.txt  pr-42-details.json  pr-diff-preview.txt
ci-logs/: errors-summary.txt  (+2 more)
editor/: CMakeLists.txt
editor/include/NovelMind/editor/: asset_browser_panel.hpp  asset_pipeline.hpp  build_settings_panel.hpp  build_size_analyzer.hpp  build_system.hpp  crash_safety.hpp  curve_editor.hpp  diagnostics_panel.hpp  editor_app.hpp  editor_runtime_host.hpp  editor_settings.hpp  error_reporter.hpp  event_bus.hpp  hierarchy_panel.hpp  inspector_binding.hpp  play_visualization.hpp  project_integrity.hpp  project_manager.hpp  scene_view_panel.hpp  script_reference_map.hpp  sdl_imgui_backend.hpp  selection_system.hpp  story_graph_editor.hpp  story_graph_panel.hpp  timeline_editor.hpp  timeline_playback.hpp  undo_system.hpp  voice_manager.hpp
editor/include/NovelMind/editor/qt/: nm_dock_panel.hpp  nm_icon_manager.hpp  nm_main_window.hpp  nm_play_mode_controller.hpp  nm_style_manager.hpp  nm_undo_manager.hpp  nm_welcome_dialog.hpp  qt_event_bus.hpp  qt_selection_manager.hpp
editor/include/NovelMind/editor/qt/panels/: nm_asset_browser_panel.hpp  nm_build_settings_panel.hpp  nm_console_panel.hpp  nm_curve_editor_panel.hpp  nm_debug_overlay_panel.hpp  nm_diagnostics_panel.hpp  nm_hierarchy_panel.hpp  nm_inspector_panel.hpp  nm_localization_panel.hpp  nm_play_toolbar_panel.hpp  nm_scene_view_panel.hpp  nm_story_graph_panel.hpp  nm_timeline_panel.hpp  nm_voice_manager_panel.hpp
editor/src/: asset_browser_panel.cpp  asset_pipeline.cpp  asset_preview.cpp  build_settings_panel.cpp  console_panel.cpp  curve_editor.cpp  debug_overlay_panel.cpp  diagnostics_panel.cpp  editor_app.cpp  editor_runtime_host.cpp  editor_settings.cpp  editor_state.cpp  gui_panel_base.cpp  hierarchy_panel.cpp  imgui_integration.cpp  inspector_panel.cpp  localization_panel.cpp  main.cpp  scene_view_panel.cpp  sdl_imgui_backend.cpp  selection_system.cpp  story_graph_panel.cpp  timeline_editor.cpp  timeline_panel.cpp  timeline_playback.cpp  voice_manager.cpp
editor/src/qt/: main.cpp  nm_dock_panel.cpp  nm_icon_manager.cpp  nm_main_window.cpp  nm_play_mode_controller.cpp  nm_style_manager.cpp  nm_undo_manager.cpp  nm_welcome_dialog.cpp  qt_event_bus.cpp  qt_selection_manager.cpp
editor/src/qt/panels/: nm_asset_browser_panel.cpp  nm_build_settings_panel.cpp  nm_console_panel.cpp  nm_curve_editor_panel.cpp  nm_debug_overlay_panel.cpp  nm_diagnostics_panel.cpp  nm_hierarchy_panel.cpp  nm_inspector_panel.cpp  nm_localization_panel.cpp  nm_play_toolbar_panel.cpp  nm_scene_view_panel.cpp  nm_story_graph_panel.cpp  nm_timeline_panel.cpp  nm_voice_manager_panel.cpp
engine_core/: CMakeLists.txt
engine_core/include/NovelMind/audio/: audio_manager.hpp
engine_core/include/NovelMind/core/: application.hpp  assert.hpp  debug_overlay.hpp  logger.hpp  profiler.hpp  property_system.hpp  result.hpp  timer.hpp  types.hpp
engine_core/include/NovelMind/input/: input_manager.hpp
engine_core/include/NovelMind/localization/: localization_manager.hpp
engine_core/include/NovelMind/platform/: window.hpp
engine_core/include/NovelMind/renderer/: camera.hpp  color.hpp  font.hpp  renderer.hpp  sprite.hpp  text_layout.hpp  texture.hpp  transform.hpp
engine_core/include/NovelMind/save/: save_manager.hpp
engine_core/include/NovelMind/scene/: animation.hpp  character_sprite.hpp  choice_menu.hpp  dialogue_box.hpp  scene_graph.hpp  scene_inspector.hpp  scene_manager.hpp  scene_object.hpp  transition.hpp
engine_core/include/NovelMind/scripting/: ast.hpp  compiler.hpp  interpreter.hpp  ir.hpp  lexer.hpp  opcode.hpp  parser.hpp  script_error.hpp  script_runtime.hpp  token.hpp  validator.hpp  value.hpp  vm.hpp  vm_security.hpp
engine_core/include/NovelMind/ui/: ui_framework.hpp
engine_core/include/NovelMind/vfs/: file_handle.hpp  file_system_backend.hpp  memory_fs.hpp  multi_pack_manager.hpp  pack_reader.hpp  pack_security.hpp  resource_cache.hpp  resource_id.hpp  virtual_file_system.hpp  virtual_fs.hpp
engine_core/include/nm/audio/: audio_manager.hpp
engine_core/include/nm/core/: application.hpp  assert.hpp  logger.hpp  result.hpp  timer.hpp  types.hpp
engine_core/include/nm/input/: input_manager.hpp
engine_core/include/nm/platform/: window.hpp
engine_core/include/nm/renderer/: color.hpp  font.hpp  renderer.hpp  sprite.hpp  texture.hpp  transform.hpp
engine_core/include/nm/save/: save_manager.hpp
engine_core/include/nm/scene/: scene_manager.hpp  scene_object.hpp
engine_core/include/nm/scripting/: interpreter.hpp  opcode.hpp  value.hpp  vm.hpp
engine_core/include/nm/vfs/: memory_fs.hpp  pack_reader.hpp  virtual_fs.hpp
engine_core/src/audio/: audio_manager.cpp
engine_core/src/core/: application.cpp  debug_overlay.cpp  logger.cpp  platform_sdl.cpp  profiler.cpp  property_system.cpp  timer.cpp
engine_core/src/input/: input_manager.cpp
engine_core/src/localization/: localization_manager.cpp
engine_core/src/renderer/: camera.cpp  font.cpp  renderer.cpp  sprite.cpp  text_layout.cpp  texture.cpp
engine_core/src/save/: save_manager.cpp
engine_core/src/scene/: character_sprite.cpp  choice_menu.cpp  dialogue_box.cpp  scene_graph.cpp  scene_inspector.cpp  scene_manager.cpp  scene_object.cpp  transition.cpp
engine_core/src/scripting/: compiler.cpp  interpreter.cpp  ir.cpp  lexer.cpp  parser.cpp  script_runtime.cpp  validator.cpp  vm.cpp  vm_security.cpp
engine_core/src/ui/: ui_framework.cpp
engine_core/src/vfs/: file_handle.cpp  file_system_backend.cpp  memory_fs.cpp  multi_pack_manager.cpp  pack_reader.cpp  pack_security.cpp  resource_cache.cpp  resource_id.cpp  virtual_file_system.cpp  virtual_fs.cpp
tests/: CMakeLists.txt
tests/integration/: test_asset_database.cpp  test_diagnostics_panel.cpp  test_editor_runtime.cpp  test_editor_settings.cpp  test_gui_panels.cpp
tests/unit/: test_fuzzing.cpp  test_memory_fs.cpp  test_result.cpp  test_snapshot.cpp  test_timer.cpp  test_validator.cpp  test_value.cpp  test_vm.cpp
(+25 files in other folders)
